Добавлен список тем для докладов

--- a/Lectures_rad_phys.tex
+++ b/Lectures_rad_phys.tex
@@ -2228,9 +2228,91 @@ $n=0$ (учитывая, что $0! =1$) получим
 
 Область сверхвозбуждения простирается от $I_0$ до энергии около 30 эВ. Сверхвозбуждение возникает в результате примерно 63\% всех первичных событий, происходящих без ионизации, а конкуренция между двумя путями – ионизацией и диссоциацией – была доказана экспериментально. 
 
-До середины 60-х гг. считалось, что при облучении водных растворов макромолекул косвенное поражение их происходит за счет взаимодействия с радикалами Н`, ОН` и перекисью водорода. 
+До середины 60-х гг. считалось, что при облучении водных растворов макромолекул косвенное поражение их происходит за счет взаимодействия с радикалами $Н'$, $ОН'$ и перекисью водорода. 
 
 Дальнейшие исследования привели к открытию в облученной воде особой стабилизированной формы электрона, которая получила, название \emph{«гидратированный электрон»}.
+
+\begin{wrapfigure}{R}{0.4\textwidth}
+    \centering
+    \includegraphics[width=.4\textwidth]{hydratedElectron.png}
+    \caption{Гидратированный электрон: а) схематическое представление последнего участка пути «свободного электрона» в жидкости; б) основная ориентация полярных молекул воды вокруг гидратированного электрона}
+    \label{hydratedElectron}
+\end{wrapfigure}
+Гидратированный электрон, обозначаемый \emph{\ce{e^{-}_{гидр.}}}, возникает в результате
+стабилизации свободного электрона в «потенциальной яме», образованной
+поляризованными молекулами воды (рис. \ref{hydratedElectron} а, б).
+
+Растеряв на возбуждение и ионизацию среды большую часть энергии, электрон
+продолжает взаимодействовать с окружающими его молекулами до тех пор, пока
+он в конце концов не окажется в «потенциальной яме», так как не сможет
+преодолеть электростатическое отталкивание электронного облака молекулы, через которую
+он проходит.
+
+Гидратированный электрон, который в химическом отношении ведет себя, как очень
+активный ион, вступая в реакции со многими веществами при первом соударении. Скорость
+реакции ограничена временем, необходимым для того, чтобы перемещающиеся в результате диффузии реагенты «нашли друг друга». Время жизни в высокоочищенной воде приближается к 1 мс. Такое
+большое время жизни позволяет гидратированному электрону диффундировать на
+значительные расстояния от трека первичной ионизирующей частицы и
+взаимодействовать с растворенными молекулами.
+
+\begin{table}[htbp]
+    \centering\begin{tabular}{|p{10cm}|C{5,5cm}|}
+        \hline
+        $\gamma_\text{макс.}$ & 720 нм \\ \hline
+        $\varepsilon_\text{720 нм}$ & 15800 моль$^{-1}\cdot$см$^{-1}$ \\ \hline
+        $\varepsilon_\text{578 нм}$ & 10600 моль$^{-1}\cdot$см$^{-1}$ \\ \hline
+        $\tau_{1/2}(\ce{e^{-}_{гидр.}} + H_2O)$ & 780 мкс \\ \hline
+        $\tau_{1/2}(нейтральная H_2O)$ & 230 мкс \\ \hline
+        заряд иона & $-1$ \\ \hline
+        радиус распределения заряда (расч.) & 0,25 -- 0,3 нм \\ \hline 
+        энергия гидратации & 1,82 эВ \\ \hline
+        коэффициент диффузии & $4,7\cdot 10^{-5}$ см$^{-2}\cdot c^{-1}$ \\ \hline
+        $E^0(\ce{e^{-}_{гидр.}} + H_3O^{+} \rightarrow 1/2H_2 + H_2O)$ & 2,58 эВ \\ \hline
+        $pK(\ce{e^{-}_{гидр.}} + H_2O \rightarrow H + OH^{-})$ & 9,7 \\ \hline
+        $k_\text{\ce{e^{-}_{гидр.}}} + H_2O$ & 16 \\ \hline
+    \end{tabular}
+    \caption{Характеристика гидратированного электрона}
+    \label{hydratedElectronFeatures}
+\end{table}
+
+Первичные реакции, происходящие после возбуждения и ионизации можно
+суммировать в виде общей схемы.
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{radiolysisOfWater.png}
+    \caption{Схема образования первичных продуктов радиолиза воды}
+    \label{radiolysisOfWater}
+\end{figure}
+Первичные продукты радиолиза воды – радикалы $H', OH'$, \ce{e^{-}_{гидр.}}, – располагаются
+в пространстве достаточно близко друг от друга, образуя своеобразные скопления –
+«рои» небольшого объема, средний радиус которых около 1,5 нм. Радиохимики
+называют эти скопления шпурами. В среднем на шпур приходится около 6 радикалов.Именно в шпуре происходит рекомбинация радикалов с образованием молекулярных
+продуктов – $Н_2$ и $Н_2О_2$.
+
+Атаковать растворенные молекулы могут лишь те радикалы, которые не
+рекомбинируют, а выходят из шпура. Эти радикалы, а также молекулярные продукты
+радиолиза мы будем называть продуктами радиолиза воды. Образование их отражает
+следующее суммарное уравнение:
+\[ H_2O \rightarrow H' + OH^{+} + \ce{e^{-}_{гидр.}} + H_2 + H_2O_2 + H_3O^{+},\]
+где $H_3O^{+}$ – принятая форма записи иона $H^{+}$, уравновешивающего
+отрицательный заряд гидратированного электрона.
+
+\begin{wraptable}{R}{.35\textwidth}
+    \caption{Радиационно-химический выход продуктов радиолиза воды}\label{radioOutput}
+    \begin{tabular}{|C{2.7 cm}|C{2.5 cm}|} \hline
+    Продукты радиолиза воды & Значение G \\ \hline
+    \ce{e^{-}_{гидр.}} & 2,6 \\  \hline
+    $H'$ & 0,6 \\  \hline
+    $OH'$ & 2,6 \\  \hline
+    $H_2O_2$ & 0,75 \\  \hline
+    $H_2$ & 0,45 \\  \hline
+    \end{tabular}
+\end{wraptable}
+В таблице \ref{radioOutput} приведены радиационно-химические выходы $G$ продуктов радиолиза воды.
+
+Оказалось, что при нейтральном значении рН на каждые 100 эВ поглощенной энергии излучения в наибольшем количестве образуются гидратированные электроны и радикалы $OH'$. 
+
+Для исследования механизмов взаимодействия продуктов радиолиза воды и растворенных макромолекул необходимо располагать надежными методами идентификации продуктов радиолиза и уметь определять их количество. Количество молекулярных продуктов – $H_2$ и $H_2O_2$ – оценивают стандартными методами химического анализа. Наличие гидратированного электрона можно зарегистрировать по характерному спектру оптического поглощения. Спектр поглощения радикала $OH'$ регистрируют в области ниже 300 нм. В сочетании перечисленные методы позволяют исследовать типы реакций, происходящих при взаимодействии продуктов радиолиза воды с органическими молекулами. 
 
 % \textbf{Основная литература:}
 % \begin{enumerate}
